--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,9 +13,9 @@
         android:theme="@style/Theme.MediAssist"
         tools:targetApi="31">
         <activity
-            android:name=".SignupActivity"
+            android:name=".login.LoginActivity"
             android:exported="false"
-            android:label="@string/title_activity_signup"
+            android:label="LoginActivity"
             android:theme="@style/Theme.MediAssist.NoActionBar">
             <meta-data
                 android:name="android.app.lib_name"
