--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,6 +12,7 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.MediAssist"
         tools:targetApi="31">
+
         <activity
             android:name=".login.LoginActivity"
             android:exported="false"
@@ -32,6 +33,16 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
 
+            <meta-data
+                android:name="android.app.lib_name"
+                android:value="" />
+        </activity>
+
+        <activity
+            android:name=".clinic.ClinicActivity"
+            android:exported="false"
+            android:label="@string/title_activity_clinic"
+            android:theme="@style/Theme.MediAssist.NoActionBar">
             <meta-data
                 android:name="android.app.lib_name"
                 android:value="" />
