--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools">
+    xmlns:tools="http://schemas.android.com/tools" >
 
     <application
         android:allowBackup="true"
@@ -11,13 +11,21 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.MediAssist"
-        tools:targetApi="31">
-
+        tools:targetApi="31" >
+        <activity
+            android:name=".doctor.DoctorActivity"
+            android:exported="false"
+            android:label="@string/title_activity_doctor"
+            android:theme="@style/Theme.MediAssist.NoActionBar" >
+            <meta-data
+                android:name="android.app.lib_name"
+                android:value="" />
+        </activity>
         <activity
             android:name=".login.LoginActivity"
             android:exported="false"
             android:label="LoginActivity"
-            android:theme="@style/Theme.MediAssist.NoActionBar">
+            android:theme="@style/Theme.MediAssist.NoActionBar" >
             <meta-data
                 android:name="android.app.lib_name"
                 android:value="" />
@@ -26,7 +34,7 @@
             android:name=".MainActivity"
             android:exported="true"
             android:label="@string/app_name"
-            android:theme="@style/Theme.MediAssist.NoActionBar">
+            android:theme="@style/Theme.MediAssist.NoActionBar" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -37,12 +45,11 @@
                 android:name="android.app.lib_name"
                 android:value="" />
         </activity>
-
         <activity
             android:name=".clinic.ClinicActivity"
             android:exported="false"
             android:label="@string/title_activity_clinic"
-            android:theme="@style/Theme.MediAssist.NoActionBar">
+            android:theme="@style/Theme.MediAssist.NoActionBar" >
             <meta-data
                 android:name="android.app.lib_name"
                 android:value="" />
