--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,7 +13,17 @@
         android:theme="@style/Theme.MediAssist"
         tools:targetApi="31">
         <activity
-            android:name=".CategoryActivity"
+            android:name=".clinicadmin.ClinicAdminActivity"
+            android:exported="false"
+            android:label="ClinicAdminActivity"
+            android:theme="@style/Theme.MediAssist.NoActionBar">
+
+            <meta-data
+                android:name="android.app.lib_name"
+                android:value="" />
+        </activity>
+        <activity
+            android:name=".category.CategoryActivity"
             android:exported="false"
             android:label="@string/title_activity_category"
             android:theme="@style/Theme.MediAssist.NoActionBar">
