--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,11 +12,15 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.MediAssist"
         tools:targetApi="31">
+        <meta-data
+            android:name="com.google.android.actions"
+            android:resource="@xml/dropdown_item" />
+
         <activity
             android:name=".resetpassword.ForgotPasswordActivity"
             android:exported="false"
             android:label="forgot_password"
-            android:theme="@style/Theme.MediAssist.NoActionBar" >
+            android:theme="@style/Theme.MediAssist.NoActionBar">
             <meta-data
                 android:name="android.app.lib_name"
                 android:value="" />
@@ -25,7 +29,7 @@
             android:name=".login.LoginActivity"
             android:exported="false"
             android:label="LoginActivity"
-            android:theme="@style/Theme.MediAssist.NoActionBar" >
+            android:theme="@style/Theme.MediAssist.NoActionBar">
             <meta-data
                 android:name="android.app.lib_name"
                 android:value="" />
@@ -44,7 +48,6 @@
             android:exported="false"
             android:label="ClinicAdminActivity"
             android:theme="@style/Theme.MediAssist.NoActionBar">
-
             <meta-data
                 android:name="android.app.lib_name"
                 android:value="" />
@@ -62,7 +65,7 @@
             android:name=".MainActivity"
             android:exported="true"
             android:label="@string/app_name"
-            android:theme="@style/Theme.MediAssist.NoActionBar" >
+            android:theme="@style/Theme.MediAssist.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
