made responsive and added custom toast

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -43,10 +43,9 @@ dependencies {
     implementation 'androidx.navigation:navigation-ui:2.5.3'
     implementation 'com.google.firebase:firebase-core:21.1.1'
     implementation 'com.google.firebase:firebase-firestore:24.4.0'
-    implementation 'com.google.firebase:firebase-firestore:24.0.2'
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.4'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.0'
     implementation 'pl.droidsonroids.gif:android-gif-drawable:1.2.22'
     implementation "androidx.cardview:cardview:1.0.0"
 
@@ -62,6 +61,10 @@ dependencies {
     // When using the BoM, you don't specify versions in Firebase library dependencies
     implementation 'com.google.firebase:firebase-auth:21.1.0'
     implementation 'com.google.firebase:firebase-firestore:24.4.0'
+
+    implementation 'com.intuit.sdp:sdp-android:1.1.0'
+    implementation 'com.intuit.ssp:ssp-android:1.1.0'
+    implementation "androidx.constraintlayout:constraintlayout-compose:1.0.1"
 
 }
 
