--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
 
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
 
     <application
@@ -14,6 +16,15 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.MediAssist"
         tools:targetApi="31">
+        <activity
+            android:name=".SearchDoctors.SearchDoctorsListActivity"
+            android:exported="false"
+            android:label="@string/title_activity_search_doctors_list"
+            android:theme="@style/Theme.MediAssist.NoActionBar">
+            <meta-data
+                android:name="android.app.lib_name"
+                android:value="" />
+        </activity>
         <activity
             android:name=".appointment.ScheduleAppointmentActivity"
             android:exported="false"
@@ -37,6 +48,9 @@
                 android:name="android.app.lib_name"
                 android:value="" />
         </activity>
+
+
+
         <activity
             android:name=".login.LoginActivity"
             android:exported="false"
