--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,6 +17,15 @@
         android:theme="@style/Theme.MediAssist"
         tools:targetApi="31">
         <activity
+            android:name=".appointmentstatus.AppointmentListActivity"
+            android:exported="false"
+            android:label="@string/title_activity_appointment_list"
+            android:theme="@style/Theme.MediAssist.NoActionBar">
+            <meta-data
+                android:name="android.app.lib_name"
+                android:value="" />
+        </activity>
+        <activity
             android:name=".SearchDoctors.SearchDoctorsListActivity"
             android:exported="false"
             android:label="@string/title_activity_search_doctors_list"
@@ -48,9 +57,6 @@
                 android:name="android.app.lib_name"
                 android:value="" />
         </activity>
-
-
-
         <activity
             android:name=".login.LoginActivity"
             android:exported="false"
