--- a/app/build.gradle
+++ b/app/build.gradle
@@ -72,8 +72,7 @@ dependencies {
     implementation 'com.google.android.libraries.places:places:2.7.0'
     implementation 'com.beastwall:localisation:1.0.5'
     implementation 'com.google.code.gson:gson:2.9.1'
-
-
+    implementation 'com.google.android.material:material:1.8.0-alpha02'
 
 }
 
