--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,6 +20,24 @@
         android:theme="@style/Theme.MediAssist"
         tools:targetApi="31">
         <activity
+            android:name=".denyappointmentclinicadmin.DenyAppointmentClinicAdminSpecificMainActivity"
+            android:exported="false"
+            android:label="DenyAppointmentClinicAdminSpecificMainActivity"
+            android:theme="@style/Theme.MediAssist.NoActionBar">
+            <meta-data
+                android:name="android.app.lib_name"
+                android:value="" />
+        </activity>
+        <activity
+            android:name=".acceptappointmentclinicadmin.AcceptAppointmentClinicAdminSpecificActivity"
+            android:exported="false"
+            android:label="AcceptAppointmentClinicAdminSpecificActivity"
+            android:theme="@style/Theme.MediAssist.NoActionBar">
+            <meta-data
+                android:name="android.app.lib_name"
+                android:value="" />
+        </activity>
+        <activity
             android:name=".scheduleappointmentdoctor.ScheduledAppointmentForDoctorMainActivity"
             android:exported="false"
             android:label="@string/title_activity_scheduled_appointment_for_doctor_main"
