SuperAdmin Pending appointment view.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,6 +22,15 @@
         <activity
             android:name=".acceptappointmentadmin.AcceptAppointmentAdminMainActivity"
             android:exported="false"
+            android:label="@string/title_activity_accept_deny_appointment_admin_main"
+            android:theme="@style/Theme.MediAssist.NoActionBar">
+            <meta-data
+                android:name="android.app.lib_name"
+                android:value="" />
+        </activity>
+        <activity
+            android:name=".acceptdenyappointmentadmin.AcceptDenyAppointmentAdminMainActivity"
+            android:exported="false"
             android:label="@string/title_activity_accept_appointment_admin_main"
             android:theme="@style/Theme.MediAssist.NoActionBar">
             <meta-data
