--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,6 +20,15 @@
         android:theme="@style/Theme.MediAssist"
         tools:targetApi="31">
         <activity
+            android:name=".denyappointmentadmin.DenyAppointmentAdminSpecificMainActivity"
+            android:exported="false"
+            android:label="@string/title_activity_deny_appointment_admin_specific_main"
+            android:theme="@style/Theme.MediAssist.NoActionBar">
+            <meta-data
+                android:name="android.app.lib_name"
+                android:value="" />
+        </activity>
+        <activity
             android:name=".acceptappointmentadmin.AcceptAppointmentAdminMainActivity"
             android:exported="false"
             android:label="@string/title_activity_accept_deny_appointment_admin_main"
